Starting to write accounts files
Starting accounts writing, and the menus has changed. New menu, accounts starting to use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(SOURCE_FILES
         menus.c
         smtp.h
         menus.h
-        smtp.c)
+        smtp.c accounts.h accounts.c)
 
 add_executable(GHA2018 ${SOURCE_FILES})
 
